force-app/main/default/objects/Relief_Valve_Routing__c/Relief_Valve_Routing__c.object-meta.xml
<CustomObject>
    <label>Relief Valve Routing</label>
    <nameField>
        <displayFormat>RVR-{0000}</displayFormat>
        <label>Relief Valve Routing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relief Valve Routing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>