force-app/main/default/objects/Relief_Valve_Routing__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>