force-app/main/default/objects/Relief_Valve_Routing__c/fields/Outside_Operation_Item__c.field-meta.xml
<CustomField>
    <fullName>Outside_Operation_Item__c</fullName>
    <label>Outside Operation Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>