force-app/main/default/objects/Relief_Valve_Routing__c/fields/Pallet_Type__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Type__c</fullName>
    <label>Pallet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Film</fullName>
            </value>
            <value>
                <fullName>O-Ring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>