force-app/main/default/objects/Relief_Valve_Routing__c/fields/Seat_Material__c.field-meta.xml
<CustomField>
    <fullName>Seat_Material__c</fullName>
    <label>Seat Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Aluminum</fullName>
            </value>
            <value>
                <fullName>5-316 SS</fullName>
            </value>
            <value>
                <fullName>6-Derakane(R) 411-45</fullName>
            </value>
            <value>
                <fullName>7-Furan</fullName>
            </value>
            <value>
                <fullName>9-Derakane(R) 470-36</fullName>
            </value>
            <value>
                <fullName>A-Aluminum (Replaceable)</fullName>
            </value>
            <value>
                <fullName>F-Kynar(R)</fullName>
            </value>
            <value>
                <fullName>G-Chlorinated Polyvinyl Chloride</fullName>
            </value>
            <value>
                <fullName>H-High Density Polyethylene</fullName>
            </value>
            <value>
                <fullName>J-Polypropylene</fullName>
            </value>
            <value>
                <fullName>R-316 SS (Replaceable)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>